--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 <body>
     <div class="container">
         <h1>TITULO</h1>
-        <p This doesn’t include documentation, source files, or any optional JavaScript dependencies like Popper.></p>
-        <P Compile Bootstrap with your own asset pipeline by downloading our source Sass, JavaScript, and documentation files.></P>
+        <p> This doesn’t include documentation, source files, or any optional JavaScript dependencies like Popper.</p>
     </div>
 </body>
 </html>
