--- a/index.html
+++ b/index.html
@@ -12,5 +12,17 @@
         <h1>TITULO</h1>
         <p> This doesn’t include documentation, source files, or any optional JavaScript dependencies like Popper.</p>
     </div>
+    <div class="container">
+        <h2>Botones en Bootstrap</h2>
+        <button type="button" class="btn btn-primary">primario</button>
+        <button type="button" class="btn btn-secondary">secondry</button>
+        <button type="button" class="btn btn-success">success</button>
+        <button type="button" class="btn btn-info">info</button>
+        <button type="button" class="btn btn warning">warning</button>
+        <button type="button" class="btn btn-danger">danger</button>
+        <button type="button" class="btn btn-dark">dark</button>
+        <button type="button" class="btn btn-line">line</button>
+        <button type="button" class="btn btn-link">link</button>
+    </div>
 </body>
 </html>
