--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container">
         <h2>Botones en Bootstrap</h2>
         <button type="button" class="btn btn-primary">primario</button>
-        <button type="button" class="btn btn-secondary">secondry</button>
+        <button type="button" class="btn btn-secondary">secondary</button>
         <button type="button" class="btn btn-success">success</button>
         <button type="button" class="btn btn-info">info</button>
         <button type="button" class="btn btn warning">warning</button>
