--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         <button type="button" class="btn btn-secondary">secondary</button>
         <button type="button" class="btn btn-success">success</button>
         <button type="button" class="btn btn-info">info</button>
-        <button type="button" class="btn btn warning">warning</button>
+        <button type="button" class="btn btn-warning">warning</button>
         <button type="button" class="btn btn-danger">danger</button>
         <button type="button" class="btn btn-dark">dark</button>
-        <button type="button" class="btn btn-line">line</button>
+        <button type="button" class="btn btn-light">btn-light</button>
         <button type="button" class="btn btn-link">link</button>
     </div>
 </body>
