--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <button type="button" class="btn btn-warning">warning</button>
         <button type="button" class="btn btn-danger">danger</button>
         <button type="button" class="btn btn-dark">dark</button>
-        <button type="button" class="btn btn-light">btn-light</button>
+        <button type="button" class="btn btn-light">light</button>
         <button type="button" class="btn btn-link">link</button>
     </div>
 </body>
