--- a/index.html
+++ b/index.html
@@ -8,6 +8,28 @@
 </head>
 
 <body>
+    <nav class= "navbar navbar-spand-small bg-dark">
+        <div class="container-fluid">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">acerca de</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">compras</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">ventas</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">contacto</a>
+                </li>
+            </ul>
+        </div>
+
+    </nav>
     <div class="container">
         <h1>TITULO</h1>
         <p> This doesn’t include documentation, source files, or any optional JavaScript dependencies like Popper.</p>
