--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 
 <body>
-    <nav class= "navbar navbar-spand-small bg-dark">
+    <nav class= "navbar navbar-expand-small bg-dark">
         <div class="container-fluid">
+            
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link" href="#">home</a>
