--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <nav class= "navbar navbar-expand-sn bg-dark">
+    <nav class= "navbar navbar-expand-sm bg-dark">
         <div class="container-fluid">
             
             <ul class="navbar-nav">
