--- a/index.html
+++ b/index.html
@@ -47,5 +47,11 @@
         <button type="button" class="btn btn-light">light</button>
         <button type="button" class="btn btn-link">link</button>
     </div>
+
+    <div class="container">
+        <h2> Imagen circular</h2>
+        <p> Este es un ejemplo imagen circular</p>
+        <img src="img/imagen.webp" alt="">
+    </div>
 </body>
 </html>
