--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div class="container">
         <h2> Imagen circular</h2>
         <p> Este es un ejemplo imagen circular</p>
-        <img src="img/imagen.webp" class="rounder-circle">
+        <img src="img/imagen.webp" class="rounded-circle">
     </div>
 </body>
 </html>
